# vgl

./: .gitlab-ci.yml  CircleShape.vala  Drawable.vala  Event.vala  IWindow.vala  README.md  RectangleShape.vala  RenderTarget.vala  RenderTexture.vala  RenderWindow.vala  Shape.vala  Sprite.vala  Text.vala  Texture.vala  Transformable.vala  Types.vala  Window.vala  burger.wrap  main.vala  meson.build  vgl.wrap
src/: Animation.vala  CairoShape.vala  CircleShape.vala  Drawable.vala  EllipseShape.vala  Event.vala  Graphene.vala  Layer.vala  Private.vala  RectangleShape.vala  RenderTarget.vala  RenderTexture.vala  Shape.vala  Sprite.vala  Text.vala  Texture.vala  Transformable.vala  Window.vala  meson.build
vapi/: sdl2.vapi
