
src_vala = [
  files('Event.vala'),
  files('Graphene.vala'),
  files('Sprite.vala'),
  files('Texture.vala'),
  files('Window.vala'),
  files('Shape.vala'),
  files('Drawable.vala'),
  files('CircleShape.vala'),
  files('CairoShape.vala'),
  files('Text.vala'),
  files('RenderTexture.vala'),
  files('Animation.vala'),
  files('Layer.vala'),
  files('RectangleShape.vala')
]
